cambio de maestria

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
-                <p>hablaremos de su vida y obra maestra</p>
+                <p>hablaremos de su vida y obra maestra vamosss con todo</p>
             </div>
         </div>
     </body>
