--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Bienvenidos</title>
+<title>Bienvenidos a HyperBlock</title>
 <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
