Agregando link a BLOGPOST

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title> Page Angie</title>
 </head>
 <body>
-    <p>Soy mas feliz </p>
+    <p>Angie Page  </p>
+    <p>https://angiel.netlify.app/blogpost.html </p>
 </body>
 </html>
