Agregado Link correcto al index para visualizar el BlogPost

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <p>Angie Page  </p>
-    <p>https://angiel.netlify.app/blogpost.html </p>
+    <p> </p>
+    <a href="https://angiel.netlify.app/blogpost.html"> Mi blogPost</a>
+    <p> Disfrutalo </p>
+    
 </body>
 </html>
