Se agregan Mayusculas y minusculas al titulo

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
         <div id="cabecera">
             <img id="logo" src="imagenes/dragon.png" />
             Hyperblog
-            <span id="tagline">ANGIE POST MARAVILLOSO</span>
+            <span id="tagline">Angee Post Maravilloso</span>
         </div>
         <div id="post">
             <h1>Iniciando un gran proyecto</h1>
