Cambio al color de fondo y texto del footer.

--- a/blogpost.html
+++ b/blogpost.html
@@ -23,7 +23,9 @@
                     alt="Paisaje maravilloso, es una valle lleno de montañas alrededor, con un bello rio" width="100%" >
             </p>
             <p>AMOR Y PAZ</p>
-            <p>Soy mas feliz </p>
+            <p>Soy mas feliz </p>            
+        </div>
+        <div id="pie">
             <p>HECHO CON AMOR EN PLATZI</p>
         </div>
     </div>
